ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.9
    • Affects Version/s: 3.1.8
    • Component/s: Diagnostics
    • Fully Compatible
    • ALL
    • Platform 9 (09/18/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      > mongod --setParameter diagnosticDataCollectionPeriodMillis=100
      2015-09-17T09:43:07.888-0400 I -        [main] Fatal Assertion 17508
      2015-09-17T09:43:07.888-0400 I -        [main] 
      
      ***aborting after fassert() failure
      
      
      2015-09-17T09:43:07.897-0400 F -        [main] Got signal: 6 (Aborted).
      
       0x124c962 0x124b879 0x124c082 0x7f93f6656340 0x7f93f62b7cc9 0x7f93f62bb0d8 0x11e6082 0xefc97c 0xb95b15 0xa015f0 0xefc110 0xef95b1 0xc5caa6 0x8fb42b 0x8f8434 0x9028ab 0x902f5c 0x90328e 0x8fa64a 0x7f93f62a2ec5 0x8f3ca9
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"E4C962"},{"b":"400000","o":"E4B879"},{"b":"400000","o":"E4C082"},{"b":"7F93F6646000","o":"10340"},{"b":"7F93F6281000","o":"36CC9"},{"b":"7F93F6281000","o":"3A0D8"},{"b":"400000","o":"DE6082"},{"b":"400000","o":"AFC97C"},{"b":"400000","o":"795B15"},{"b":"400000","o":"6015F0"},{"b":"400000","o":"AFC110"},{"b":"400000","o":"AF95B1"},{"b":"400000","o":"85CAA6"},{"b":"400000","o":"4FB42B"},{"b":"400000","o":"4F8434"},{"b":"400000","o":"5028AB"},{"b":"400000","o":"502F5C"},{"b":"400000","o":"50328E"},{"b":"400000","o":"4FA64A"},{"b":"7F93F6281000","o":"21EC5"},{"b":"400000","o":"4F3CA9"}]}
       mongod(_ZN5mongo15printStackTraceERSo+0x32) [0x124c962]
       mongod(+0xE4B879) [0x124b879]
       mongod(+0xE4C082) [0x124c082]
       libpthread.so.0(+0x10340) [0x7f93f6656340]
       libc.so.6(gsignal+0x39) [0x7f93f62b7cc9]
       libc.so.6(abort+0x148) [0x7f93f62bb0d8]
       mongod(_ZN5mongo13fassertFailedEi+0x82) [0x11e6082]
       mongod(+0xAFC97C) [0xefc97c]
       mongod(+0x795B15) [0xb95b15]
       mongod(_ZN5mongo23ExportedServerParameterIiE3setERKi+0x20) [0xa015f0]
       mongod(_ZN5mongo23ExportedServerParameterIiE13setFromStringERKSs+0x60) [0xefc110]
       mongod(_ZN5mongo18storeServerOptionsERKNS_17optionenvironment11EnvironmentERKSt6vectorISsSaISsEE+0x1FE1) [0xef95b1]
       mongod(_ZN5mongo18storeMongodOptionsERKNS_17optionenvironment11EnvironmentERKSt6vectorISsSaISsEE+0x26) [0xc5caa6]
       mongod(_ZN5mongo45_mongoInitializerFunction_MongodOptions_StoreEPNS_18InitializerContextE+0x2B) [0x8fb42b]
       mongod(_ZNSt17_Function_handlerIFN5mongo6StatusEPNS0_18InitializerContextEEPS4_E9_M_invokeERKSt9_Any_dataS3_+0x14) [0x8f8434]
       mongod(_ZNK5mongo11Initializer7executeERKSt6vectorISsSaISsEERKSt3mapISsSsSt4lessISsESaISt4pairIKSsSsEEE+0x1CB) [0x9028ab]
       mongod(_ZN5mongo21runGlobalInitializersERKSt6vectorISsSaISsEERKSt3mapISsSsSt4lessISsESaISt4pairIKSsSsEEE+0x2C) [0x902f5c]
       mongod(_ZN5mongo21runGlobalInitializersEiPKPKcS3_+0x31E) [0x90328e]
       mongod(main+0x6A) [0x8fa64a]
       libc.so.6(__libc_start_main+0xF5) [0x7f93f62a2ec5]
       mongod(+0x4F3CA9) [0x8f3ca9]
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Bruce Lucas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: