SERVER-20454: Fatal assertion attempting to set diagnosticDataCollectionPeriodMillis